# launchpad-microservice

./: .gitignore  README.md  pyproject.toml  requirements.txt  testing_lp_service.py
.github/workflows/: build-snap.yml
lp_microservice/: __init__.py  init_auth.py  lp_service.py  main.py
snap/: snapcraft.yaml
